--- a/src/index.html
+++ b/src/index.html
@@ -1,47 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/favicon.ico">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/favicon.ico" />
     <title>Ирвас окна</title>
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
-     <!-- Fonts -->
-     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
-     <!-- Animate -->
-     <link rel="stylesheet" href="assets/css/animate.min.css">
-     <link href="assets/css/style.css" rel="stylesheet">
-   </head>
-   
+    <link href="assets/css/bootstrap.css" rel="stylesheet" />
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" />
+    <!-- Animate -->
+    <link rel="stylesheet" href="assets/css/animate.min.css" />
+    <link href="assets/css/style.css" rel="stylesheet" />
+  </head>
+
   <body>
     <header class="header">
       <div class="container">
         <div class="row">
-
           <div class="col-md-5 col-sm-3 col-xs-12">
             <div class="logo">
               <div class="logo_img">
-                <img src="assets/img/header/logo.png" alt="#">
+                <img src="assets/img/header/logo.png" alt="#" />
               </div>
               <p>Остекление балконов и лоджий в Москве и Московской области</p>
             </div>
           </div>
 
           <div class="col-md-2 col-sm-3 col-xs-12">
-           <div class="header_btn_wrap">
-             <div class="header_btn_wrap_block">
-               <button class="header_btn text-uppercase text-left popup_engineer_btn">
-                   Вызвать <br>замерщика
-               </button>
-             </div>
-           </div>
+            <div class="header_btn_wrap">
+              <div class="header_btn_wrap_block">
+                <button class="header_btn text-uppercase text-left popup_engineer_btn">
+                  Вызвать <br />замерщика
+                </button>
+              </div>
+            </div>
           </div>
 
           <div class="col-md-2 col-sm-3 col-xs-6 text-left">
             <div class="working_hours">
               <div class="working_hours_img">
-                <img src="assets/img/header/clock.png" alt="#">
+                <img src="assets/img/header/clock.png" alt="#" />
               </div>
               <p>без выходных <span>9:00 - 18:00</span></p>
             </div>
@@ -50,73 +49,311 @@
           <div class="col-md-3 col-sm-3 col-xs-6">
             <div class="contact_us">
               <div class="contact_us_wrap">
-                <a href="#"><img src="assets/img/header/phone.png" alt="#">+7 (495) 646-61-71</a>
+                <a href="#"><img src="assets/img/header/phone.png" alt="#" />+7 (495) 646-61-71</a>
                 <a class="phone_link" href="#">Заказать обратный звонок</a>
               </div>
             </div>
           </div>
-
         </div>
       </div>
     </header>
-</head>
-  <!-- Main -->
-  <main class="main">
-    <div class="container">
-      <div class="row">
 
-        <div class="col-lg-6 col-md-7 wow fadeInLeft">
-          <h1><span>Остекление балконов "под ключ"<br></span>за 12 800 рублей!</h1>
-          <div class="main_features">
+    <!-- Main -->
+    <main class="main">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 col-md-7 wow fadeInLeft">
+            <h1>
+              <span>Остекление балконов "под ключ"<br /></span>за 12 800 рублей!
+            </h1>
+            <div class="main_features">
+              <div class="row">
+                <div class="col-sm-3 col-xs-6">
+                  <div class="main_features_block">
+                    <img src="assets/img/main/icons/quality.png" alt="" />
+                    <p>Высокое <br />качество</p>
+                  </div>
+                </div>
 
-           <div class="row">
+                <div class="col-sm-3 col-xs-6">
+                  <div class="main_features_block">
+                    <img src="assets/img/main/icons/time.png" alt="" />
+                    <p>Быстрый <br />монтаж</p>
+                  </div>
+                </div>
 
-             <div class="col-sm-3 col-xs-6">
-               <div class="main_features_block">
-                 <img src="assets/img/main/icons/quality.png" alt="">
-                 <p>Высокое <br>качество</p>
-               </div>
-             </div>
+                <div class="col-sm-3 col-xs-6">
+                  <div class="main_features_block">
+                    <img class="small_img" src="assets/img/main/icons/guaranty.png" alt="" />
+                    <p>Гарантия <br />3 года</p>
+                  </div>
+                </div>
 
-             <div class="col-sm-3 col-xs-6">
-               <div class="main_features_block">
-                 <img src="assets/img/main/icons/time.png" alt="">
-                 <p>Быстрый <br>монтаж</p>
-               </div>
-             </div>
-
-            <div class="col-sm-3 col-xs-6">
-              <div class="main_features_block">
-                <img class="small_img" src="assets/img/main/icons/guaranty.png" alt="">
-                <p>Гарантия <br>3 года</p>
+                <div class="col-sm-3 col-xs-6">
+                  <div class="main_features_block">
+                    <img class="small_img" src="assets/img/main/icons/delivery.png" alt="" />
+                    <p>Вывоз <br />мусора</p>
+                  </div>
+                </div>
               </div>
             </div>
+          </div>
 
-             <div class="col-sm-3 col-xs-6">
-               <div class="main_features_block">
-                 <img class="small_img" src="assets/img/main/icons/delivery.png" alt="">
-                 <p>Вывоз <br>мусора</p>
-               </div>
-             </div>
+          <div
+            class="
+              col-lg-4 col-lg-offset-2 col-md-5 col-md-offset-0 col-sm-8 col-sm-offset-2 col-xs-12
+              wow
+              fadeInRight
+            "
+          >
+            <form class="form main_form" action="#">
+              <h2>Запишитесь сегодня на <br /><span>бесплатный замер</span></h2>
+              <input
+                class="form-control form_input"
+                name="user_name"
+                required
+                type="text"
+                placeholder="Введите ваше имя"
+              />
+              <input
+                class="form-control form_input"
+                name="user_phone"
+                required
+                type="text"
+                placeholder="Введите телефон"
+              />
+              <button class="text-uppercase btn-block button" name="submit" type="submit">
+                Вызвать замерщика!
+              </button>
+              <p class="form_notice">Ваши данные конфиденциальны</p>
+            </form>
+          </div>
+        </div>
+      </div>
+    </main>
+    <!-- Glazing -->
+    <section class="glazing">
+      <div class="container">
+        <div class="section_header">
+          <h2>Остекление балконов и лоджий</h2>
+          <div class="section_header_sub"></div>
+        </div>
 
-           </div>
-
+        <!-- Slider -->
+        <div class="glazing_slider">
+          <div class="glazing_block text-center wow fadeInUp">
+            <img src="assets/img/glazing/icons/1.png" alt="#" />
+            <a class="tree_link">Деревянное <br />остекление</a>
+          </div>
+          <div class="glazing_block text-center wow fadeInUp" data-wow-delay="0.1s">
+            <img src="assets/img/glazing/icons/2.png" alt="#" />
+            <a class="aluminum_link">Алюминиевое <br />остекление</a>
+          </div>
+          <div class="glazing_block text-center wow fadeInUp" data-wow-delay="0.2s">
+            <img src="assets/img/glazing/icons/3.png" alt="#" />
+            <a class="plastic_link">Остекление <br />пластиковыми <br />рамами</a>
+          </div>
+          <div class="glazing_block text-center wow fadeInUp" data-wow-delay="0.3s">
+            <img src="assets/img/glazing/icons/4.png" alt="#" />
+            <a class="french_link">Французское <br />остекление <br />(панорамное)</a>
+          </div>
+          <div class="glazing_block text-center wow fadeInUp" data-wow-delay="0.4s">
+            <img src="assets/img/glazing/icons/5.png" alt="#" />
+            <a class="rise_link">Остекление <br />с выносом</a>
           </div>
         </div>
 
-        <div class="col-lg-4 col-lg-offset-2 col-md-5 col-md-offset-0 col-sm-8 col-sm-offset-2 col-xs-12 wow fadeInRight">
-          <form class="form main_form" action="#">
-            <h2>Запишитесь сегодня на <br><span>бесплатный замер</span></h2>
-            <input class="form-control form_input" name="user_name" required type="text" placeholder="Введите ваше имя">
-            <input class="form-control form_input" name="user_phone" required type="text" placeholder="Введите телефон">
-            <button class="text-uppercase btn-block button" name="submit" type="submit">Вызвать замерщика!</button>
-            <p class="form_notice">Ваши данные конфиденциальны</p>
-          </form>
-        </div>
+        <!-- Tree -->
+        <div class="row tree glazing_content faded">
+          <div class="col-md-6 no-padding">
+            <div class="glazing_cold">
+              <h3>Холодное</h3>
+              <img src="assets/img/glazing/img_cold.png" alt="#" />
+              <ul>
+                <li>Конструктивная толщина 42-58 мм</li>
+                <li>Остекление: полированное стекло (толщиной 4 - 5 мм)</li>
+                <li>Теплоизоляция: 0,07 м<sup>2</sup> * С/Вт</li>
+                <li>Звукоизоляция: 20-27 дб</li>
+              </ul>
+            </div>
+            <div class="glazing_price">
+              <p>2600 руб.кв.м.<br /><span>под ключ с установкой</span></p>
+              <button class="button glazing_price_btn text-uppercase popup_calc_btn">
+                Рассчитать стоимость
+              </button>
+            </div>
+          </div>
 
+          <div class="col-md-6 no-padding">
+            <div class="glazing_warm">
+              <h3>теплое</h3>
+              <img src="assets/img/glazing/img_warm.png" alt="#" />
+              <ul>
+                <li>Конструктивная толщина профиля: 58-78 м</li>
+                <li>Остекление: однокамерные и двухкамерные стеклопакеты</li>
+                <li>Теплоизоляция: 0,63 - 1,05 м<sup>2</sup> * С/Вт</li>
+                <li>Звукоизоляция: до 5 класса</li>
+              </ul>
+            </div>
+            <div class="glazing_price">
+              <p>4000 руб.кв.м.<br /><span>под ключ с установкой</span></p>
+              <button class="button glazing_price_btn text-uppercase popup_calc_btn">
+                Рассчитать стоимость
+              </button>
+            </div>
+          </div>
+        </div>
+        <!-- /Tree -->
+
+        <!-- Aluminum -->
+        <div class="row aluminum glazing_content faded">
+          <div class="col-md-6 no-padding">
+            <div class="glazing_cold">
+              <h3>Холодное</h3>
+              <img src="assets/img/glazing/aluminum/cold.jpg" alt="#" />
+              <ul>
+                <li>Конструктивная толщина 40-50 мм</li>
+                <li>Остекление: полированное стекло (толщиной 4 - 5 мм)</li>
+                <li>Теплоизоляция: 0,07 м<sup>2</sup> * С/Вт</li>
+                <li>Звукоизоляция: 20-27 дб</li>
+              </ul>
+            </div>
+            <div class="glazing_price">
+              <p>4000 руб.кв.м.<br /><span>под ключ с установкой</span></p>
+              <button class="button glazing_price_btn text-uppercase popup_calc_btn">
+                Рассчитать стоимость
+              </button>
+            </div>
+          </div>
+
+          <div class="col-md-6 no-padding">
+            <div class="glazing_warm">
+              <h3>теплое</h3>
+              <img src="assets/img/glazing/aluminum/warm.jpg" alt="#" />
+              <ul>
+                <li>Конструктивная толщина профиля: 60-68 м</li>
+                <li>Остекление: однокамерные и двухкамерные стеклопакеты</li>
+                <li>Теплоизоляция: 0,63 - 1,05 м<sup>2</sup> * С/Вт</li>
+                <li>Звукоизоляция: до 5 класса</li>
+              </ul>
+            </div>
+            <div class="glazing_price">
+              <p>8000 руб.кв.м.<br /><span>под ключ с установкой</span></p>
+              <button class="button glazing_price_btn text-uppercase popup_calc_btn">
+                Рассчитать стоимость
+              </button>
+            </div>
+          </div>
+        </div>
+        <!-- /Aluminum -->
+
+        <!-- Plastic -->
+        <div class="row plastic glazing_content faded">
+          <div class="col-md-6 col-md-offset-3 no-padding">
+            <div class="glazing_warm">
+              <h3>теплое</h3>
+              <img src="assets/img/glazing/plastic/warm.jpg" alt="#" />
+              <ul>
+                <li>Конструктивная толщина профиля: 58-70 м</li>
+                <li>Остекление: однокамерные и двухкамерные стеклопакеты</li>
+                <li>Теплоизоляция: 0,63 - 1,05 м<sup>2</sup> * С/Вт</li>
+                <li>Звукоизоляция: до 5 класса</li>
+              </ul>
+            </div>
+            <div class="glazing_price">
+              <p>5500 руб.кв.м.<br /><span>под ключ с установкой</span></p>
+              <button class="button glazing_price_btn text-uppercase popup_calc_btn">
+                Рассчитать стоимость
+              </button>
+            </div>
+          </div>
+        </div>
+        <!-- /Plastic -->
+
+        <!-- French -->
+        <div class="row french glazing_content faded">
+          <div class="col-md-6 no-padding">
+            <div class="glazing_cold">
+              <h3>Пластик</h3>
+              <img src="assets/img/glazing/french/plastic.jpg" alt="#" />
+              <ul>
+                <li>Конструктивная толщина 58-70 мм</li>
+                <li>Остекление: однокамерные и двухкамерные стеклопакеты</li>
+                <li>Теплоизоляция: 0,63 - 1,05 м<sup>2</sup> * С/Вт</li>
+                <li>Звукоизоляция: до 5 класса</li>
+              </ul>
+            </div>
+            <div class="glazing_price">
+              <p>5500 руб.кв.м.<br /><span>под ключ с установкой</span></p>
+              <button class="button glazing_price_btn text-uppercase popup_calc_btn">
+                Рассчитать стоимость
+              </button>
+            </div>
+          </div>
+
+          <div class="col-md-6 no-padding">
+            <div class="glazing_warm">
+              <h3>Алюминий</h3>
+              <img src="assets/img/glazing/french/aluminum.jpg" alt="#" />
+              <ul>
+                <li>Конструктивная толщина профиля: 60-68 мм</li>
+                <li>Остекление: однокамерные и двухкамерные стеклопакеты</li>
+                <li>Теплоизоляция: 0,63 - 1,05 м<sup>2</sup> * С/Вт</li>
+                <li>Звукоизоляция: до 5 класса</li>
+              </ul>
+            </div>
+            <div class="glazing_price">
+              <p>8000 руб.кв.м.<br /><span>под ключ с установкой</span></p>
+              <button class="button glazing_price_btn text-uppercase popup_calc_btn">
+                Рассчитать стоимость
+              </button>
+            </div>
+          </div>
+        </div>
+        <!-- /French -->
+
+        <!-- Rise -->
+        <div class="row rise glazing_content faded">
+          <div class="col-md-6 no-padding">
+            <div class="glazing_cold">
+              <h3>Алюминий</h3>
+              <img src="assets/img/glazing/rise/aluminum.jpg" alt="#" />
+              <ul>
+                <li>Конструктивная толщина 40-50 мм</li>
+                <li>Остекление: полированное стекло (толщиной 4 - 5 мм)</li>
+                <li>Теплоизоляция: 0,07 м<sup>2</sup> * С/Вт</li>
+                <li>Звукоизоляция: 20-27 дб</li>
+              </ul>
+            </div>
+            <div class="glazing_price">
+              <p>4000 руб.кв.м.<br /><span>под ключ с установкой</span></p>
+              <button class="button glazing_price_btn text-uppercase popup_calc_btn">
+                Рассчитать стоимость
+              </button>
+            </div>
+          </div>
+
+          <div class="col-md-6 no-padding">
+            <div class="glazing_warm">
+              <h3>Дерево</h3>
+              <img src="assets/img/glazing/rise/tree.jpg" alt="#" />
+              <ul>
+                <li>Конструктивная толщина профиля: 40-42 мм</li>
+                <li>Остекление: полированное стекло (толщиной 4 мм)</li>
+                <li>Теплоизоляция: 0,07 м<sup>2</sup> * С/Вт</li>
+                <li>Звукоизоляция: 20-27 дб</li>
+              </ul>
+            </div>
+            <div class="glazing_price">
+              <p>8000 руб.кв.м.<br /><span>под ключ с установкой</span></p>
+              <button class="button glazing_price_btn text-uppercase popup_calc_btn">
+                Рассчитать стоимость
+              </button>
+            </div>
+          </div>
+        </div>
+        <!-- /Rise -->
       </div>
-    </div>
-  </main>
-    
-</body>
+    </section>
+  </body>
 </html>
